# Autoware

ros/src/msgs/autoware_msgs/msg/: DetectedObject.msg
ros/src/viewers/: CMakeLists.txt
ros/src/viewers/include/: gencolors.cpp
ros/src/viewers/launch/: viewers.launch
ros/src/viewers/nodes/image_viewer/: image_viewer.cpp
